
Changelog v1.4.0 to v1.4.1
--------------------------
-Fix update TPM2.net implementation (add total packet bytes)
-Fix cleanup unused files
-Fix OSC listener, increased buffer size to 50kb to large image content can be sent via OSC
-Fix OSC address, expected: "/NAME" was: "NAME"
-Remove all references to the MD5 class, use Adler as caching mechanism (20x faster)
-Keep aspect ratio if internal buffer size is calculated


Changelog v1.3.1 to v1.4.0
--------------------------
-Add support for E1.31 devices
-Add more 8x8 icon images
-Add new effect, rotate 90 degrees
-Add option to hide internal Visuals to save CPU power
-Add new generator: VisualZero. use the first visual as generator, you can chain you effects.
-Add new random preset mode
-Add Pass through mode: ScreenCaputure (always) and OSC Generator (depending on input) are now 
     24bpp generators, you cannot use effects/mixer/colorsets
-Add option to adjust the color for each PixelInvaders panel
-Add new gamma option, GAMMA 2.2 
-Fix: Checkbox mixer for larger resolutions
-Fix: find .png files in GUI
-Fix: Do not change selected visual and output if a preset is loaded
-Fix: Handle missing config files
-Fix: if the Null output and another output is configured, ignore null output and start PixelController
-Fix: Preset numbering and loading Preset 0
-Fix: Load Presets: do not display non-existent files in the GUI
-Fix: Textwriter generator, use 8bpp as temp buffer to prevent artefacts
-Fix: Improve Add and Sub Mixer (rollover) 
-PixelInvaders Output: Use Adler32 as caching mechanism instead of MD5 - much faster.
                       md5 needs about 1ms to generate, adler32 needs about 0.2ms.
                         2 panels, 50fps, save: 80ms/s, 6 panels, 20fps, save: 96ms/s
-Rainbowduino Output: Cleanup init code. 
-Optimize PixelInvaders Firmware, use Serial.readBytes instead Serial.read() (see http://www.pjrc.com/teensy/benchmark_usb_serial_receive.html)
 PixelInvaders Firmware is now 20% faster.